# kasai

./: .gitignore  ArrayUtility.cpp  ArrayUtility.h  CMakeLists.txt  Event.cpp  Event.h  EventEngine.cpp  EventEngine.h  Feed.cpp  Feed.h  File.cpp  File.h  IReversible.cpp  IReversible.h  IndentationTallyTag.cpp  IndentationTallyTag.h  MatchmakerUtility.h  MemberPrototype.cpp  MemberPrototype.h  Node.cpp  Node.h  Pattern.cpp  Pattern.h  Primal.cpp  Primal.h  Prototype.cpp  Prototype.h  PrototypeEngine.cpp  PrototypeEngine.h  Prototype_Engine.cpp  Prototype_Engine.h  PythonicStartBlockTallyTag.cpp  PythonicStartBlockTallyTag.h  Query.cpp  Query.h  README.md  Splitter.cpp  Splitter.h  StrQuery.cpp  StrQuery.h  (+36 more)
